# slim-mcp-rust

./: .clippy.toml  .gitignore  .release-plz.toml  Cargo.toml  README.md  Taskfile.yaml  deny.toml  docker-bake.hcl  rust-toolchain.toml
.cargo/: config.toml
.github/: release-config.json  release-manifest.json
.github/actions/cleanup-disk/: action.yaml
.github/actions/setup-rust/: action.yaml
.github/actions/trigger-integrations/: action.yaml
.github/workflows/: ci-test-and-build.yaml  helm-charts.yaml  release-check.yaml  release-helm.yaml  release-images.yaml  release-rust.yaml  reusable-docker-build-push.yaml  reusable-helm-lint-test.yaml  reusable-helm-release.yaml  reusable-rust-build-and-test.yaml
charts/mcp-proxy/: CHANGELOG.md  Chart.yaml  values.yaml
charts/mcp-proxy/templates/: NOTES.txt  _helpers.tpl  configmap.yaml  deployment.yaml  serviceaccount.yaml
mcp-proxy/: CHANGELOG.md  Cargo.toml  Dockerfile  README.md  Taskfile.yaml
mcp-proxy/config/: mcp-proxy-config.yaml
mcp-proxy/examples/k8s-test/: README.md
mcp-proxy/examples/k8s-test/kind-config/: kind-cluster-config.yaml
mcp-proxy/examples/k8s-test/mcp-client/: client.py  pyproject.toml
mcp-proxy/examples/k8s-test/mcp-proxy-config/: mcp-proxy-values-with-secret.yaml  mcp-proxy-values.yaml  test-secret.yaml
mcp-proxy/examples/k8s-test/mcp-server-config/: kubernetes-mcp-server-values.yaml
mcp-proxy/examples/local-test/: README.md
mcp-proxy/examples/local-test/mcp-server/: README.md
mcp-proxy/examples/local-test/mcp-slim-client/: main.py  pyproject.toml
mcp-proxy/examples/mcp-server/: README.md  main.py  pyproject.toml
mcp-proxy/examples/mcp-slim-client/: README.md  main.py  pyproject.toml
mcp-proxy/mcp-proxy/: CHANGELOG.md
mcp-proxy/src/: main.rs  proxy.rs
tasks/: rust.yaml
