[package]
name = "agntcy-slim-mcp-proxy"
version = "0.2.0"
edition = "2024"
license = "Apache-2.0"
description = "Proxy for exposing a native MCP server over SLIM"

[package.metadata.cargo-machete.renamed]
agntcy-slim = "slim"
agntcy-slim-auth = "slim_auth"
agntcy-slim-config = "slim_config"
agntcy-slim-datapath = "slim_datapath"
agntcy-slim-service = "slim_service"
agntcy-slim-session = "slim_session"
agntcy-slim-signal = "slim_signal"

[[bin]]
name = "slim-mcp-proxy"
path = "src/main.rs"

[dependencies]
agntcy-slim = { git = "https://github.com/agntcy/slim.git", branch = "main" }
agntcy-slim-auth = { git = "https://github.com/agntcy/slim.git", branch = "main" }
agntcy-slim-config = { git = "https://github.com/agntcy/slim.git", branch = "main" }
agntcy-slim-datapath = { git = "https://github.com/agntcy/slim.git", branch = "main" } 
agntcy-slim-service = { git = "https://github.com/agntcy/slim.git", branch = "main" } 
agntcy-slim-session = { git = "https://github.com/agntcy/slim.git", branch = "main" } 
agntcy-slim-signal = { git = "https://github.com/agntcy/slim.git", branch = "main" } 
async-trait = "0.1"
clap = "4.5.37"
futures-util = "0.3.31"
rand = "0.9.1"
rmcp = { version = "0.1.5", features = ["client", "transport-sse"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
tracing = "0.1.41"
