[package]
name = "agntcy-slim-mcp-proxy"
version = "0.2.1"
edition = "2024"
license = "Apache-2.0"
description = "Proxy for exposing a native MCP server over SLIM"

[package.metadata.cargo-machete.renamed]
agntcy-slim = "slim"
agntcy-slim-auth = "slim_auth"
agntcy-slim-config = "slim_config"
agntcy-slim-datapath = "slim_datapath"
agntcy-slim-service = "slim_service"
agntcy-slim-session = "slim_session"
agntcy-slim-signal = "slim_signal"

[[bin]]
name = "slim-mcp-proxy"
path = "src/main.rs"

[dependencies]
agntcy-slim = "1.0.1"
# from the slim repo
# agntcy-slim = { git = "https://github.com/agntcy/slim.git", branch = "main" }
agntcy-slim-auth = "0.5.0"
agntcy-slim-config = "0.6.0"
agntcy-slim-datapath = "0.11.1"
agntcy-slim-service = "0.8.4"
agntcy-slim-session = "0.1.4"
agntcy-slim-signal = "0.1.4"
async-trait = "0.1"
clap = "4.5.37"
futures = "0.3.31"
futures-util = "0.3.31"
rand = "0.9.1"
reqwest = { version = "0.12", default-features = false, features = [
    "json",
    "stream",
] }
rmcp = { version = "0.14.0", features = [
    "client",
    "transport-streamable-http-client-reqwest",
] }
serde_json = "1.0"
sse-stream = "0.2.1"
tokio = { version = "1", features = ["full"] }
tracing = "0.1.41"
