[project]
name = "mcp-slim-client"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"

dependencies = [
    "mcp==1.6.0",
    "anyio>=4.5",
    # refer to a commit
    "slim-mcp @ git+https://github.com/agntcy/slim-mcp-python.git@3e5fb13a4a53e639ea9e1cec19905bb34dfa485d"
    # refer to a tag
    # For tag: "slim-mcp @ git+https://github.com/agntcy/slim-mcp-python.git@v0.1.8"
]
