[project]
name = "mcp-slim-client"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"

dependencies = [
    "mcp==1.26.0",
    "anyio>=4.5",
    #"slim-mcp>=0.2.1",
    # refer to a commit
    "slim-mcp @ git+https://github.com/agntcy/slim-mcp-python.git@f7a568dc23ebac9f629205eb9094d429127ebf94",
    # refer to a tag
    # "slim-mcp @ git+https://github.com/agntcy/slim-mcp-python.git@v0.2.0"
]
